--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@angular/platform-browser-dynamic": "~15.0.0",
         "@angular/router": "~15.0.0",
         "@nrwl/angular": "15.3.3",
+        "angular-in-memory-web-api": "^0.15.0",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
