--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@angular/platform-browser-dynamic": "~15.0.0",
         "@angular/router": "~15.0.0",
         "@nrwl/angular": "15.3.3",
+        "@rx-angular/state": "^1.7.0",
+        "@rx-angular/template": "^1.0.0-rc.4",
         "angular-in-memory-web-api": "^0.15.0",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
